--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ and open the template in the editor.
         <script src="js/jquery-2.1.1.min.js" type="text/javascript"></script>
         <script src="js/bootstrap.min.js" type="text/javascript"></script>
         <link rel="stylesheet" href="css/bootstrap.min.css"/>
+        <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
         <link rel="stylesheet" href="css/sticky-footer-navbar.css"/>
 
         <title>Engenharia de Computação e Informação</title>
@@ -37,13 +38,15 @@ and open the template in the editor.
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Grêmio ECI<span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
+                                    <li><a href="http://gremioeci.com.br/">Gestão Atual</a></li>
+                                    <li><a href="#">Eleições</a></li>
+                                    <li><a href="#">Chapas Candidatas</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
+                                    <li><a href="#">Chapa 1</a></li>
+                                    <li><a href="#">Chapa 2</a></li>
+                                    <li><a href="#">Chapa 3</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li><a href="#">Registro de Candidaturas</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
@@ -51,33 +54,29 @@ and open the template in the editor.
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="#">Hacker Group</a></li>
                                     <li><a href="#">Games Group</a></li>
-                                    <li><a href="#">Something else here</a></li>
+                                    <li><a href="#">Web Development Group</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
+                                    <li><a href="#">Registro de Grupos</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Materias<span class="caret"></span></a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="#">1º Period</a></li>
-                                    <li><a href="#">2º Period</a></li>
-                                    <li><a href="#">3º Period</a></li>
-                                    <li><a href="#">4º Period</a></li>
-                                    <li><a href="#">5º Period</a></li>
-                                    <li><a href="#">6º Period</a></li>
-                                    <li><a href="#">7º Period</a></li>
-                                    <li><a href="#">8º Period</a></li>
-                                    <li><a href="#">9º Period</a></li>
-                                    <li><a href="#">10º Period</a></li>
+                                    <li><a href="#">1º Periodo</a></li>
+                                    <li><a href="#">2º Periodo</a></li>
+                                    <li><a href="#">3º Periodo</a></li>
+                                    <li><a href="#">4º Periodo</a></li>
+                                    <li><a href="#">5º Periodo</a></li>
+                                    <li><a href="#">6º Periodo</a></li>
+                                    <li><a href="#">7º Periodo</a></li>
+                                    <li><a href="#">8º Periodo</a></li>
+                                    <li><a href="#">9º Periodo</a></li>
+                                    <li><a href="#">10º Periodo</a></li>
                                     <li class="divider"></li>
                                     <li><a href="#">Separated link</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">One more separated link</a></li>
                                 </ul>
                             </li>
-                            <li><a href="#">Repositório</a></li>
+                            <li><a href="http://eci.inoa.com.br/">Repositório</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             <form class="navbar-form navbar-left" role="search">
@@ -91,9 +90,8 @@ and open the template in the editor.
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="#">Register</a></li>
                                     <li><a href="#">Log In</a></li>
-                                    <li><a href="#">Something else here</a></li>
                                     <li class="divider"></li>
-                                    <li><a href="#">Separated link</a></li>
+                                    <li><a href="#">Administrar Conta</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -102,10 +100,104 @@ and open the template in the editor.
             </nav>
         </div>
 
-        <div class="footer">
-            <div class="container">                
-                <p class="text-muted">Place sticky footer content here.</p>
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="images/Ranged-AD-League-of-Legends-Wallpaper.jpg" alt="...">
+                    <div class="carousel-caption">
+                        Some Test 1
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/ad_1.png" alt="...">
+                    <div class="carousel-caption">
+                        Some Test 2
+                    </div>
+                </div>
+                <div class="item">
+                    <img src="images/0UNFhK6.jpg" alt="...">
+                    <div class="carousel-caption">
+                        Some Test 3
+                    </div>
+                </div>
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
+
+        <div class="container">
+
+            <div class="row row-offcanvas row-offcanvas-right">
+
+                <div class="col-xs-12 col-sm-12">
+
+                    <p class="pull-right visible-xs">
+                        <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+                    </p>
+                    <div class="jumbotron">
+                        <h1>Hello, world!</h1>
+                        <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-sm-6 col-lg-4">
+                            <h2>Heading</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div><!--/span-->
+                        <div class="col-6 col-sm-6 col-lg-4">
+                            <h2>Heading</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div><!--/span-->
+                        <div class="col-6 col-sm-6 col-lg-4">
+                            <h2>Heading</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div><!--/span-->
+                        <div class="col-6 col-sm-6 col-lg-4">
+                            <h2>Heading</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div><!--/span-->
+                        <div class="col-6 col-sm-6 col-lg-4">
+                            <h2>Heading</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                        </div><!--/span-->
+                        <div class="col-6 col-sm-6 col-lg-4">
+                            <h2>Heading</h2>
+                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                            <br>
+                        </div><!--/span-->
+                    </div><!--/row-->
+                </div><!--/span-->
+
             </div>
         </div>
+
+
+        <div class="footer">
+            <div class="container">                
+                <p class="text-muted">&copy; Engenharia de Computação e Informação. Created by <a href="http://gremioeci.com.br/">Grêmio ECI.</a><br>
+                    Universidade Federal do Rio de Janeiro - Escola Politécnica<br>
+                    Av. Athos da Silveira Ramos, 149, CT - Bloco A, 2º andar - Cidade Universitária - Rio de Janeiro - RJ - Brasil - CEP: 21941-909</p>
+            </div>
+        </div>
+
     </body>
 </html>
